# atomicDEX-API

./: CHANGELOG.md  Cargo.toml  azure-pipelines-android-job.yml  azure-pipelines-build-stage-job.yml  azure-pipelines-wasm-stage-job.yml  azure-pipelines.yml
.github/workflows/: adex_linux.yml  fmt-and-lint.yml
mm2src/: database.rs  docker_tests.rs  lp_network.rs  lp_ordermatch.rs  lp_swap.rs  mm2_tests.rs
mm2src/coins/: Cargo.toml  build.rs  coin_balance.rs  coin_errors.rs  eth.rs  hd_pubkey.rs  hd_wallet.rs  init_withdraw.rs  lightning.rs  lp_coins.rs  my_tx_history_v2.rs  qrc20.rs  solana.rs  test_coin.rs  utxo.rs  z_coin.rs
mm2src/coins/eth/: eth_tests.rs  swap_contract_abi.json  v2_activation.rs
mm2src/coins/for_tests/: ZOMBIE_CACHE.db
mm2src/coins/hd_wallet_storage/: mock_storage.rs  mod.rs  sqlite_storage.rs  wasm_storage.rs
mm2src/coins/lightning/: ln_errors.rs  ln_events.rs  ln_platform.rs  ln_utils.rs
mm2src/coins/nft/: nft_structs.rs
mm2src/coins/nft_storage/: mod.rs  sql_storage.rs  wasm_storage.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  account_balance_rpc_error.rs  enable_address.rs  init_create_account.rs  init_scan_for_new_addresses.rs  init_withdraw.rs  list_address.rs  mod.rs
mm2src/coins/solana/: solana_decode_tx_helpers.rs  solana_tests.rs  spl.rs
mm2src/coins/tendermint/: mod.rs  tendermint_coin.rs  tendermint_token.rs  tendermint_tx_history_v2.rs
mm2src/coins/tx_history_storage/: mod.rs  tx_history_v2_tests.rs
mm2src/coins/utxo/: bch.rs  bch_and_slp_tx_history.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  spv.rs  utxo_block_header_storage.rs  utxo_common.rs  utxo_common_tests.rs  utxo_sql_block_header_storage.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_withdraw.rs
mm2src/coins/utxo/spv/: Cargo.toml
mm2src/coins/utxo/spv/src/: helpers_validation.rs  lib.rs  proof.rs  work.rs
mm2src/coins/utxo/spv/src/work/: btc.rs
mm2src/coins/z_coin/: cash.z.wallet.sdk.rpc.rs  z_coin_errors.rs  z_coin_native_tests.rs  z_coin_tests.rs  z_htlc.rs  z_rpc.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: bch_with_tokens_activation.rs  erc20_token_activation.rs  eth_with_token_activation.rs  l2.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  slp_token_activation.rs  solana_with_tokens_activation.rs  spl_token_activation.rs  tendermint_token_activation.rs  tendermint_with_assets_activation.rs  token.rs  z_coin_activation.rs
mm2src/common/: Cargo.toml  common.rs  crash_reports.rs  for_tests.rs  wio.rs
mm2src/common/collections/: mod.rs  unique_vec.rs
mm2src/common/executor/: wasm_executor.rs
mm2src/common/mm_metrics/: adapt.rs  mod.rs  native.rs
mm2src/crypto/: Cargo.toml
mm2src/crypto/src/: bip32_child.rs  bip44.rs  crypto_ctx.rs  global_hd_ctx.rs  hd_ctx.rs  hw_ctx.rs  iguana_ctx.rs  lib.rs  privkey.rs
mm2src/db_common/src/: sqlite.rs
mm2src/docker_tests/: docker_tests_common.rs  qrc20_tests.rs  swaps_confs_settings_sync_tests.rs
mm2src/gossipsub/src/: behaviour.rs  protocol.rs
mm2src/lp_ordermatch/: best_orders.rs  orderbook_rpc.rs
mm2src/lp_swap/: maker_swap.rs  taker_swap.rs
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: mm_ctx.rs
mm2src/mm2_err_handle/src/: discard_mm.rs  lib.rs
mm2src/mm2_libp2p/: Cargo.toml
mm2src/mm2_libp2p/src/: atomicdex_behaviour.rs  lib.rs
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_main/src/: docker_tests.rs  lp_native_dex.rs  lp_network.rs  lp_ordermatch.rs  lp_swap.rs  mm2.rs  mm2_bin.rs  mm2_lib.rs  mm2_tests.rs  ordermatch_tests.rs  wasm_tests.rs
mm2src/mm2_main/tests/: docker_tests.rs  docker_tests_main.rs  mm2_tests_main.rs
mm2src/mm2_metrics/: Cargo.toml
mm2src/mm2_metrics/src/: adapt.rs  lib.rs  mm_metrics.rs  native.rs  new_lib.rs  recorder.rs  wasm.rs
mm2src/mm2_net/src/: wasm_ws.rs
mm2src/mm2_spv/: Cargo.toml
mm2src/mm2_spv/src/: conf.rs  helpers_validation.rs  work.rs
mm2src/mm2_test_helpers/: Cargo.toml
mm2src/mm2_test_helpers/dummy_files/: iris_nimda_history.json  iris_test_history.json
mm2src/mm2_test_helpers/src/: for_tests.rs  (+2 more)
mm2src/mm2_tests/: bch_and_slp_tests.rs  best_orders_tests.rs  orderbook_sync_tests.rs  structs.rs  z_coin_tests.rs
(+114 files in other folders)
