[package]
name = "utxo_spv"
version = "0.1.0"
authors = ["Roman Sztergbaum <rmscastle@gmail.com>", "Omar S.", "Samuel Onoja"]
edition = "2018"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
chain = { path = "../../../mm2_bitcoin/chain" }
derive_more = "0.99"
keys = {path = "../../../mm2_bitcoin/keys" }
primitives = { path = "../../../mm2_bitcoin/primitives" }
ripemd160 = "0.9.0"
rustc-hex = "2"
serde = "1.0"
serialization = { path = "../../../mm2_bitcoin/serialization" }
sha2 = "0.9"
test_helpers = { path = "../../../mm2_bitcoin/test_helpers" }

[dev-dependencies]
common = { path = "../../../common" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }